[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btrfs_snapback"
version = "0.1.0"
description = "A command line tool for managing Btrfs snapshots"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "click>=7.0" ]
authors = [
    { name = "Eric Hopper", email = "hopper@omnifarious.org" }
]
maintainers = [
    { name = "Eric Hopper", email = "hopper@omnifarious.org" }
]
license = { file = "LICENSE" }
keywords = ["btrfs", "backups", "devops", "systems administration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: POSIX :: Linux"
]

[project.optional-dependencies]
dev = ["pytest", "flake8", "nox"]

[project.urls]
"Homepage" = "https://github.com/omnifarious/btrfs_snapback"
"Bug Reports" = "https://github.com/omnifarious/btrfs_snapback/issues"
"Source" = "https://github.com/omnifarious/btrfs_snapback/"
#"Funding" = "https://donate.pypi.org"  # None yet
#"Say Thanks!" = "http://saythanks.io/to/example"  # None yet

[project.scripts]
btrfs_snapback = "btrfs_snapback.cli:main"
